chandeliers-lus/tests/compile_fail/ui/tc/if-int.rs
chandeliers_lus::decl! {
    node foo() returns ();
    let
        assert if 1 then true else false;
    tel;
}

fn main() {}
